5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4370/executions/1811_2564.log
== SUBMITION (2019-06-11 19:06:55) 
-- CODE:
from numpy import *
vg1=array(eval(input("gols da partida: ")))
vg2=array(eval(input("gols do time adversario: ")))
v= vg1-vg2
vi=0
em=0
de=0
for pos in v:
	if(pos==0):
		em= em+1
	elif(pos > 0):
		vi= v1+1
	else:
		de= de+1
z=zeros(3,dtype=int)
z[0] = vi
z=[1]= em
z=[2]= de
print(z)

-- EXECUTION TIME:
0.780562
-- ERROR:
  File "/home/codebench/codes/1811/2564/main.py", line 17
    z=[1]= em
     ^
SyntaxError: can't assign to literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 19:07:28) 
-- CODE:
from numpy import *
vg1=array(eval(input("gols da partida: ")))
vg2=array(eval(input("gols do time adversario: ")))
v= vg1-vg2
vi=0
em=0
de=0
for pos in v:
	if(pos==0):
		em= em+1
	elif(pos > 0):
		vi= v1+1
	else:
		de= de+1
z=zeros(3,dtype=int)
z[0] = vi
z[1]= em
z[2]= de
print(z)

-- EXECUTION TIME:
1.09546
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1811/2564/main.py", line 12, in <module>
    vi= v1+1
NameError: name 'v1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 19:07:37) 
-- CODE:
from numpy import *
vg1=array(eval(input("gols da partida: ")))
vg2=array(eval(input("gols do time adversario: ")))
v= vg1-vg2
vi=0
em=0
de=0
for pos in v:
	if(pos==0):
		em= em+1
	elif(pos > 0):
		vi= v1+1
	else:
		de= de+1
z=zeros(3,dtype=int)
z[0] = vi
z[1]= em
z[2]= de
print(z)

-- EXECUTION TIME:
1.05465
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1811/2564/main.py", line 12, in <module>
    vi= v1+1
NameError: name 'v1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 19:08:03) 
-- CODE:
from numpy import *
vg1=array(eval(input("gols da partida: ")))
vg2=array(eval(input("gols do time adversario: ")))
v= vg1-vg2
vi=0
em=0
de=0
for pos in v:
	if(pos==0):
		em= em+1
	elif(pos > 0):
		vi= vi+1
	else:
		de= de+1
z=zeros(3,dtype=int)
z[0] = vi
z[1]= em
z[2]= de
print(z)

-- EXECUTION TIME:
0.956961
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
